--- a/server/views/chat.jade
+++ b/server/views/chat.jade
@@ -4,14 +4,14 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Professors
-
+    title Maple Donut - Chat
+    
     // 1,2 - CSS BOOTSTRAP LINK
-    // 3 - CUSTOM CSS LINKS
+    // 3 - CUSTOM CSS LINK
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/professors.css')
+    link(rel='stylesheet' href='/stylesheets/chat.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -62,8 +62,8 @@ html
             .profile
               .row.justify-content-center
                 img(src='/images/donut.png')
-          h2.text-center  Username
-          h3.text-center  Biography
+          h2.text-center  Username 
+          h3.text-center  Biography 
         hr
         ul.list-unstyled.components
           li
@@ -77,7 +77,7 @@ html
               ul#coursesSubmenu.collapse.list-unstyled
                 li
                   a(href='courses') Current Courses
-                li
+                li 
                   a(href='#') Search Courses
           li.active
             a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
@@ -86,8 +86,8 @@ html
               ul#questionsSubmenu.collapse.list-unstyled
                 li
                   a(href='questions') Ask a Question
-                li
-                  a(href='messages') Search Questions
+                li 
+                  a(href='#') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -99,7 +99,7 @@ html
               ul#discussionsSubmenu.collapse.list-unstyled
                 li
                   a(href='discussions') Discussion Board
-                li
+                li 
                   a(href='#') Group Chats
         hr
         ul.list-unstyled.components
@@ -113,7 +113,7 @@ html
               | Logout
       // Page Content
       #page
-        nav.navbar.navbar-expand-ml
+        nav.navbar.navbar-expand-md
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
@@ -122,46 +122,37 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-          .h-100.d-inline-block
-          // Search bar
-          h3.text-center Search Professors
-          .container.h-100
-            .d-flex.justify-content-center.h-100
-              .searchBar
-                form(action="/professors", method="post")
-                  input(type="text", name="professor", placeholder='e.g. Brian Franczak')
-                  input(type='submit',value='Search',data-transition='fade', data-theme='c')
-                //input.searchInput(id='searchInput' type='text' placeholder='e.g. Brian Franczak')
+          .content-section
+            .content-section-title messages
+            ul
+              li.message
+                .messagegroup
+                  | Group 1
+                span.status
+                  span.status-circle.green
+                  |         message snippet
+                .button-wrapper
+                  button.content-button.status-button.open Open
+                  .menu
+              li.message
+                .messagegroup
+                  | Group 2
+                span.status
+                  span.status-circle
+                  |         messgage snippet
+                .button-wrapper
+                  button.content-button.status-button Open
+                  .menu
+              li.message
+                .messagegroup
+                  | Group 3
+                span.status
+                  span.status-circle.green
+                  |         message snippet here
+                .button-wrapper
+                  button.content-button.status-button.open Open
+                  .menu
 
-                a.searchIcon(href='#')
-                  i.fas.fa-search
-          hr
-          for names in locals.data
-            if names.name != Null
-              .d-flex.justify-content-center.h-100
-                .card
-                  img(src='/images/choc-donut.png' alt='Avatar')
-                  hr
-                  .cardContainer
-                    h3.text-center #{names.name}
-                    h4.text-center #{names.available}
-                    h3.text-center #{names.discipline}
-          h3.text-center Professors for Enrolled Courses
-          .d-flex.justify-content-center.h-100
-            .card
-              img(src='/images/choc-donut.png' alt='Avatar')
-              hr
-              .cardContainer
-                h3.text-center Brian Franczak
-                h4.text-center Statistics
-                p.text-center Assistant Professor
-
-            .card
-              img(src='/images/jelly-donut.png' alt='Avatar')
-              hr
-              .cardContainer
-                h3.text-center Erwin Pascual
-                h4.text-center Computer Science
-                p.text-center Unemployed
+    .overlay
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
