--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -4,17 +4,53 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut
-    // CSS BOOTSTRAP LINK
+    title Maple Donut - Courses
+
+    // 1,2 - CSS BOOTSTRAP LINK
+    // 3 - CUSTOM CSS LINK
+    // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    // CUSTOM CSS LINK
     link(rel='stylesheet' href='/stylesheets/courses.css')
-    // FAVICON LINK
     link(rel='icon' type='image/png' href='/images/donut.png')
-    // FONT AWESOME SCRIPT
+
+    // 1 - FONT AWESOME SCRIPT
+    // 2 - jQuery CDN - Slim version (=without AJAX)
+    // 3 - Popper.JS
+    // 4 - Bootstrap JS
+    // 5 - jQuery Custom Scroller CDN
+    // 6 - Sidebar Animation JS
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
+    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
+    script(type='text/javascript' src='/javascripts/sidebar.js')
+
   body
+    //google auth stuff
+    script.
+      function logOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        if(auth2.isSignedIn.get()){
+          auth2.signOut().then(function () {
+            console.log('User signed out.');
+            window.location.replace("login");
+          });
+        }
+
+      }
+      function onLoad() {
+      gapi.load('auth2', function() {
+      auth2 = gapi.auth2.init({
+        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
+        cookiepolicy: 'single_host_origin',
+        ux_mode: 'redirect',
+        redirect_uri: 'http://localhost:3000/home',
+        hosted_domain: 'mymacewan.ca',
+      });
+      });
+      }
     .wrapper
       // Sidebar
       nav#sidebar
@@ -34,22 +70,37 @@ html
             a(href='home')
               i.fas.fa-home
               | Home
-          li
-            a(href='courses')
+          li.active
+            a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-book
               | Courses
-          li
-            a(href='questions')
+              ul#coursesSubmenu.collapse.list-unstyled
+                li
+                  a(href='courses') Current Courses
+                li
+                  a(href='#') Search Courses
+          li.active
+            a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-question-circle
               | Questions
+              ul#questionsSubmenu.collapse.list-unstyled
+                li
+                  a(href='questions') Ask a Question
+                li
+                  a(href='#') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
               | Professors
-          li
-            a(href='discussions')
+          li.active
+            a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-comments
               | Discussions
+              ul#discussionsSubmenu.collapse.list-unstyled
+                li
+                  a(href='discussions') Discussion Board
+                li
+                  a(href='#') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -57,7 +108,7 @@ html
               i.fas.fa-cog
               | Settings
           li
-            a(href='login')
+            a(href='#' onclick='logOut();')
               i.fas.fa-sign-out-alt
               | Logout
       // Page Content
@@ -66,35 +117,41 @@ html
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
-            h3.text-center COURSES
+            .logo
+              a(href='Home')
+                img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-          h2 Homepage
-          for courses in locals.data
-            .line #{courses.course_name}
 
-          p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          .line
-          h2 Lorem Ipsum Dolor
-          p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          .line
-          h2 Lorem Ipsum Dolor
-          p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          .line
-          h3 Lorem Ipsum Dolor
-          p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          #course_container
+            .col-md-3
+              form.card.p-3.bg-light
+                h2.text-left Search For A Course
+                .input-group
+                  input#searchInput.form-control.py-2.border-right-0.border(type='search' value='Input your question here!')
+                  span.input-group-append(onclick="window.location.href='questions_ask';")
+                    button.btn.btn-outline-secondary.border-left-0.border(type='button')
+                      i.fa.fa-search
+            .col-md-3
+              form.card.p-3.bg-light
+                .list-group-flush
+
+                  h2.text-left Your Courses
+              .d-flex.justify-content
+                for courses in locals.data
+                  .card
+                    img(src='/images/choc-donut.png' alt='Avatar')
+                    .cardContainer
+                      a(href='professors/'+courses.course_name) #{courses.course_name}
+
+                  // ideally we have a for loop here  for each course
+                    a.list-group-item.list-group-item-action(href='#') Course A
+                    a.list-group-item.list-group-item-action(href='#') Course B
+                    a.list-group-item.list-group-item-action(href='#') Course C
+                    a.list-group-item.list-group-item-action(href='#') Course D
+                    a.list-group-item.list-group-item-action(href='#') Course E
+
+
     .overlay
-    // jQuery CDN - Slim version (=without AJAX)
-    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
-    // jQuery Custom Scroller CDN
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
-    // Bootstrap bundle CDN
-    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
-    // Sidebar Animation
-    script(type='text/javascript' src='/javascripts/sidebar.js')
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
