added dynamic generation to chat messages

--- a/server/public/stylesheets/chat.css
+++ b/server/public/stylesheets/chat.css
@@ -15,7 +15,7 @@ html {
     --theme-bg-color: rgba(16, 18, 27, 0.397);
     --border-color: rgba(113, 119, 144, 0.26);
     --body-font: "Poppins", sans-serif;
-    --content-title-color: #dddfee;
+    --content-title-color: #ebeeff;
     --content-bg: rgba(146, 151, 179, 0.137);
     --button-inactive: rgba(248, 242, 242, 0.521);
 }
@@ -169,48 +169,44 @@ img{ max-width:100%;}
 .incoming_msg_img {
   display: inline-block;
 }
+.message_sender{
+    display: flex;
+    flex-direction: row;
+    color: var(--content-title-color);
+    align-items: flex-end;
+    margin-bottom: 4px;
+    font-size: 20px;
+    font-weight: 550;
+}
 .received_msg {
   display: inline-block;
-  padding: 0 0 0 5px;
+  padding: 0 0 5px 15px;
   vertical-align: top;
   width: 92%;
  }
  .received_withd_msg p {
-  background: #ebebeb none repeat scroll 0 0;
   border-radius: 3px;
-  color: #646464;
+  color: #b7b9c5;
   font-size: 14px;
   margin: 0;
-  padding: 5px 10px 5px 12px;
+  padding: 5px 10px 5px 0;
   width: 100%;
 }
 .time_date {
   color: #747474;
-  display: block;
   font-size: 12px;
-  margin: 8px 0 0;
+  padding-bottom: 2px;
+  padding-left: 10px;
+  font-weight: normal;
+
 }
-.received_withd_msg { width: 57%;}
+.received_withd_msg { width: 90%;}
 .mesgs {
   float: left;
   padding: 30px 15px 0 25px;
   width: 80%;
   display: flex;
   flex-direction: column;
-}
-
- .sent_msg p {
-  background: #05728f none repeat scroll 0 0;
-  border-radius: 3px;
-  font-size: 14px;
-  margin: 0; color:#fff;
-  padding: 5px 10px 5px 12px;
-  width:100%;
-}
-.outgoing_msg{ overflow:hidden; margin:26px 0 26px;}
-.sent_msg {
-  float: right;
-  width: 46%;
 }
 .input_msg_write input {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
