--- a/server/views/chat.jade
+++ b/server/views/chat.jade
@@ -24,52 +24,18 @@ html
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js' integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm' crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     script(type='text/javascript' src='/javascripts/sidebar.js')
+    script(type='text/javascript' src='/javascripts/messages.js')
   body
     // google auth stuff and chat message generation
     script.
       window.onload = init;
 
       function init() {
-        document.getElementById('add').onclick = add;
+        document.getElementById('add').onclick = addMessageGroup;
+        document.getElementById('add2').onclick = addRecievedMessage;
+        document.getElementById('add3').onclick = addSentMessage;
       }
-      function add() {
-      var el = document.getElementById("message-list");
-      var node = document.createElement("li");
-      var div = document.createElement("div");
-      var msggrp = document.createElement("div");
-      var bttnwrap = document.createElement("div");
-      var menu = document.createElement("div");
-      var icon = document.createElement("img");
-      var status = document.createElement("span");
-      var statuscircle = document.createElement("span");
-      var bttn = document.createElement("bttn");
-      icon.src = '/images/letters/letter-s.svg'
-      icon.setAttribute("height", "40");
-      icon.setAttribute("width", "40");
-      icon.setAttribute("alt", "lettericon");
-      node.appendChild(icon);
-      node.setAttribute('class', 'message');
-      div.setAttribute('class', 'divider');
-      msggrp.setAttribute('class', 'messagegroup');
-      msggrp.innerText="Group #";
-      bttnwrap.setAttribute('class', 'button-wrapper');
-      menu.setAttribute('class', 'menu');
-      status.setAttribute('class', 'status');
-      statuscircle.setAttribute('class', "status-circle green");
-      bttn.setAttribute('class', 'message-button status-button open');
-      bttn.innerText="Open";
-      el.appendChild(node);
-      node.appendChild(div);
-      node.appendChild(msggrp);
-      
-      status.innerText="message snippet";
-      node.appendChild(status);
-      bttnwrap.appendChild(bttn);
-      bttnwrap.appendChild(menu);
-      node.appendChild(bttnwrap);
-      status.appendChild(statuscircle);
-      
-      }
+
       function logOut() {
       var auth2 = gapi.auth2.getAuthInstance();
       if (auth2.isSignedIn.get()) {
@@ -163,6 +129,7 @@ html
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             button#add Add group
+            button#add2 Add Recieved
             .logo
               a(href='Home')
                 img(src='/images/maple-donut-logo.png')
@@ -232,92 +199,128 @@ html
                   button.message-button.status-button.open Open
                   .menu
           .mesgs
-            .msg_history
+            #chat.msg_history
               .incoming_msg
                 .incoming_msg_img
                   img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .received_msg
                   .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
                     p
                       | What do you call a factory that makes okay products?
-                    span.time_date  11:01 AM    |    June 9
-              .outgoing_msg
-                .sent_msg
-                  p
-                    | I dont know.
-                  span.time_date  11:01 AM    |    June 9
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | I dont know
+              .incoming_msg
               .incoming_msg
                 .incoming_msg_img
                   img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .received_msg
                   .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
                     p A satisfactory.
-                    span.time_date  11:01 AM    |    Yesterday
-              .outgoing_msg
-                .sent_msg
-                  p 3/10
-                  span.time_date  11:01 AM    |    Today
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | 3/10
               .incoming_msg
                 .incoming_msg_img
                   img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .received_msg
                   .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
                     p
                       | What did the janitor say when he jumped out of the closet? Supplies!
-                    span.time_date  11:01 AM    |    Today
-              .outgoing_msg
-                .sent_msg
-                  p
-                    | Please stop.
-                  span.time_date  11:01 AM    |    June 9
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | pls stop
+              .incoming_msg
               .incoming_msg
                 .incoming_msg_img
                   img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .received_msg
                   .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
                     p
                       | What did the ocean say to the beach? Nothing, it just waved.
-                    span.time_date  11:01 AM    |    Today
               .incoming_msg
                 .incoming_msg_img
                   img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .received_msg
                   .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
                     p
                       | Why do seagulls fly over the ocean? Because if they flew over the bay, we'd call them bagels.
-                    span.time_date  11:01 AM    |    Today
               .incoming_msg
                 .incoming_msg_img
                   img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .received_msg
                   .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
                     p
                       | I only know 25 letters of the alphabet. I don't know y.
-                    span.time_date  11:01 AM    |    Today
               .incoming_msg
                 .incoming_msg_img
                   img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .received_msg
                   .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
                     p
                       | What did one wall say to the other? I'll meet you at the corner.
-                    span.time_date  11:01 AM    |    Today
               .incoming_msg
                 .incoming_msg_img
                   img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .received_msg
                   .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
                     p
                       | What did the zero say to the eight? That belt looks good on you.
-                    span.time_date  11:01 AM    |    Today
               .incoming_msg
                 .incoming_msg_img
                   img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .received_msg
                   .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
                     p
                       | What's the best thing about Switzerland? I don't know, but the flag is a big plus.
-                    span.time_date  11:01 AM    |    Today
             .type_msg
               .input_msg_write
                 input.write_msg(type='text' placeholder='Type a message')
