--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -125,7 +125,7 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-          form.card.p-3.bg-light
+          form.card.p-3
             h2.text-center Have a question? We'll try to find an answer!
             .input-group
               input#searchInput.form-control.py-2.border-right-0.border(type='search' value='Input your question here!')
@@ -134,78 +134,22 @@ html
                   i.fa.fa-search
             small#questionInfo.form-text.text-muted
               | If we can't find a similar one, or you want to speak with someone over voice chat, we'll set you up afterwards!
-          .card.p-3.bg-light.container-fluid
+          .card.p-3.container-fluid
             h2.text-center Your outgoing questions and their queues.
             .row
               .col-md-9
                 h5 Question
-                for questions in locals.data
-                  h5 #{questions.question_string}
-                    if questions.question_status == 0
-                      h5 Status: Not Answered
-                    else
-                      h5 Status: Answered
-
-                  a.list-group-item.list-group-item-action(href='#')
-                    | For text questions answered maybe?
-                  a.list-group-item.list-group-item-action(href='#')
-                    | For voice chat ready? Maybe with notification?
+                ul.list-group
+                  for questions in locals.data
+                    a.list-group-item.list-group-item-action #{questions.question_string}
               .col-md-3
                 h5 Place in Queue
                 ul.list-group
-                  li.list-group-item.place-in-queue 5
-                  li.list-group-item.list-group-item-primary.place-in-queue Answered
-                  li.list-group-item.list-group-item-success.place-in-queue Voice Chat Ready
-          .card.p-3.bg-light.container-fluid
-            h2.text-center Recently asked questions related to your courses.
-            .row
-              .col-md-9
-                .list-group
-                  h5 Question
-                  a.list-group-item.list-group-item-action(href='#')
-                    | This would gather stuff from our database.
-                  a.list-group-item.list-group-item-action(href='#') What's the difference between a for loop and a while loop?
-                  a.list-group-item.list-group-item-action(href='#') How do I create a function in MIPS?
-                  a.list-group-item.list-group-item-action(href='#') How do I create a table is SQL?
-                  a.list-group-item.list-group-item-action(href='#') Is HTML a programming language?
-              .list-group.col-md-3
-                h5 Course
-                a.list-group-item.list-group-item-action
-                  | NULL
-                a.list-group-item.list-group-item-action CMPT 101
-                a.list-group-item.list-group-item-action CMPT 229
-                a.list-group-item.list-group-item-action CMPT 291
-                a.list-group-item.list-group-item-action CMPT 101
-              nav(aria-label='PageNavCourseQuestions')
-                ul.pagination.justify-content-center
-                  li.page-item.disabled
-                    a.page-link(href='#' tabindex='-1') Previous
-                  li.page-item
-                    a.page-link(href='#') 1
-                  li.page-item
-                    a.page-link(href='#') 2
-                  li.page-item
-                    a.page-link(href='#') 3
-                  li.page-item
-                    a.page-link(href='#') Next
-          .card.p-3.bg-light
-            h2.text-center Popular questions asked to advisors.
-            .list-group
-              a.list-group-item.list-group-item-action(href='#')
-                | This could also be recent questions, I don't know how we'd implement popular questions.
-              a.list-group-item.list-group-item-action(href='#') I'm thinking of switching to Arts from Sciences, do all my credits transfer?
-              nav(aria-label='PageNavCourseQuestions')
-                ul.pagination.justify-content-center
-                  li.page-item.disabled
-                    a.page-link(href='#' tabindex='-1') Previous
-                  li.page-item
-                    a.page-link(href='#') 1
-                  li.page-item
-                    a.page-link(href='#') 2
-                  li.page-item
-                    a.page-link(href='#') 3
-                  li.page-item
-                    a.page-link(href='#') Next
+                  for questions in locals.data
+                      if questions.question_status == 0
+                        a.list-group-item.list-group-item-action(href='#').place-in-queue Not Answered
+                      else
+                        a.list-group-item.place-in-queueAnswered
     .overlay
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
