--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -127,13 +127,15 @@ html
         #content
           form.card.p-3
             h2.text-center Have a question? We'll try to find an answer!
-            .input-group
-              input#searchInput.form-control.py-2.border-right-0.border(type='search' value='Input your question here!')
-              span.input-group-append(onclick="window.location.href='questions_ask';")
-                button.btn.btn-outline-secondary.border-left-0.border(type='button')
-                  i.fa.fa-search
-            small#questionInfo.form-text.text-muted
-              | If we can't find a similar one, or you want to speak with someone over voice chat, we'll set you up afterwards!
+            .container.h-100
+              .d-flex.justify-content-center.h-100
+                .searchBar
+                  form(action="/questions", method="post")
+                    input(type="text", name="question", placeholder='What is supervised machine learning?')
+                    input(type='submit',value='Search',data-transition='fade', data-theme='c')
+                  a.searchIcon(href='#')
+                    i.fas.fa-search
+          hr
           .card.p-3.container-fluid
             h2.text-center Your outgoing questions and their queues.
             .row
