--- a/server/public/stylesheets/professors.css
+++ b/server/public/stylesheets/professors.css
@@ -98,6 +98,13 @@ a:focus {
     CARD STYLE
 ----------------------------------------------------- */
 
+.searchResultContainer{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .card{
     margin: 10px;
     width: 200px;
