--- a/server/public/stylesheets/layout/sidebar.css
+++ b/server/public/stylesheets/layout/sidebar.css
@@ -83,13 +83,14 @@
 .profile{
     width: 180px;
     height: 180px;
-    overflow: hidden;
-    border-radius: 50%;
+    overflow:auto;
+    
 }
 .profile img{
     display: inline-block;
     width: 100%;
     height: 100%;
+    border-radius: 50%;
 }
 
 #sidebar ul p {
