--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -138,20 +138,27 @@ html
           hr
           .card.p-3.container-fluid
             h2.text-center Your outgoing questions and their queues.
+            questions_stated = []
+            index_counter = 0
             .row
               .col-md-9
                 h5 Question
+                // loops through locals.data and assigns a list-group-item for each question string
                 ul.list-group
                   for questions in locals.data
-                    a.list-group-item.list-group-item-action #{questions.question_string}
+                    //questions_stated[index_counter] = questions.question_string
+                    //index_counter = index_counter + 1
+                    if questions.question_string != Null
+                      a.list-group-item.list-group-item-action #{questions.question_string}
               .col-md-3
                 h5 Place in Queue
+                // loops through locals.data again and states whether question is answered or not
                 ul.list-group
                   for questions in locals.data
                       if questions.question_status == 0
                         a.list-group-item.list-group-item-action(href='#').place-in-queue Not Answered
                       else
-                        a.list-group-item.place-in-queueAnswered
+                        a.list-group-item.place-in-queueAnswered Answered 
     .overlay
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
