Add Search courses page, combine questions and questions_ask

--- a/server/views/chat.jade
+++ b/server/views/chat.jade
@@ -96,7 +96,7 @@ html
                 a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
                 a(href='questions') Ask a Question
               li
-                a(href='#') Search Questions
+                a(href='questions_search') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
