--- a/server/views/questions_search.jade
+++ b/server/views/questions_search.jade
@@ -4,14 +4,14 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Ask Questions
-    
+    title Maple Donut - Question Search
+
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINKS
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/questions_ask.css')
+    link(rel='stylesheet' href='/stylesheets/questions_search.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -26,7 +26,34 @@ html
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     script(type='text/javascript' src='/javascripts/sidebar.js')
+    // Bruce's Scripts
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
+    script(type='text/javascript' src='/javascripts/google.js')
 
+  body
+    //google auth stuff
+    script.
+      function logOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        if(auth2.isSignedIn.get()){
+          auth2.signOut().then(function () {
+            console.log('User signed out.');
+            window.location.replace("login");
+          });
+        }
+
+      }
+      function onLoad() {
+      gapi.load('auth2', function() {
+      auth2 = gapi.auth2.init({
+        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
+        cookiepolicy: 'single_host_origin',
+        ux_mode: 'redirect',
+        redirect_uri: 'http://localhost:3000/home',
+        hosted_domain: 'mymacewan.ca',
+      });
+      });
+      }
     .wrapper
       // Sidebar
       nav#sidebar
@@ -38,8 +65,8 @@ html
             .profile
               .row.justify-content-center
                 img(src='/images/donut.png')
-          h2.text-center  Username 
-          h3.text-center  Biography 
+          h2.text-center  Username
+          h3.text-center  Biography
         hr
         ul.list-unstyled.components
           li
@@ -53,7 +80,7 @@ html
               ul#coursesSubmenu.collapse.list-unstyled
                 li
                   a(href='courses') Current Courses
-                li 
+                li
                   a(href='#') Search Courses
           li.active
             a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
@@ -62,8 +89,8 @@ html
               ul#questionsSubmenu.collapse.list-unstyled
                 li
                   a(href='questions') Ask a Question
-                li 
-                  a(href='#') Search Questions
+                li
+                  a(href='questions_search') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -76,7 +103,7 @@ html
                 li
                   a(href='discussions') Discussion Board
                 li 
-                  a(href='#') Group Chats
+                  a(href='chat') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -84,73 +111,30 @@ html
               i.fas.fa-cog
               | Settings
           li
-            a(href='login')
+            a(href='#' onclick='logOut();')
               i.fas.fa-sign-out-alt
               | Logout
       // Page Content
       #page
-        nav.navbar.navbar-expand-md
+        nav.navbar.navbar-expand-ml
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
-            h3.text-center QUESTIONS
+            .logo
+              a(href='Home')
+                img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-          .card.p-3.bg-light.container-fluid
-            h4.text-center Questions answered that may be similar.
-            .list-group
-              a.list-group-item.list-group-item-action(href='#')
-                | Based on keyword filtering.
-            p Note: Please be sure your question hasn't already been asked.
-          .card.p-3.bg-light.container-fluid
-            h5 Your previously inputted question.
-            .input-group
-              input#searchInput.form-control.py-2.border-right-0.border(type='search' value='Will automatically be filled.')
-            .input-group
-              .input-group-prepend
-                span.input-group-text More info
-              textarea.form-control(aria-label='With textarea')
-            p Added information is not required, but may help your responder prepare.
-            .row
-              .col-md-7
-                h5 Is this a question for a specific course, or an advisor?
-              .col-md-3
-                .input-group.mb-3
-                  select#inputCoA.custom-select
-                    option(selected='') Choose...
-                    option(value='course') Course
-                    option(value='advisor') Advisor
-            .row
-              .col-md-7
-                h5 If for a course, please specify.
-              .col-md-3
-                .input-group.mb-3
-                  select#inputCoA.custom-select
-                    option(selected='') Choose...
-                    option(value='course') CMPT 101
-                    option(value='advisor') CMPT 229
-                    option(value='advisor') CMPT 291
-            .row
-              .col-md-7
-                h5 Do you require voice chat?
-              .col-md-3
-                label.switch
-                  input(type='checkbox')
-                  span.slider
-          .card.p-3.bg-light.container-fluid
-            h4.text-center Available Teacher Aides
-            .row
-              .col-md-8
-                .list-group
-                  h5 Teacher Aides/Advisors Available
-                  a.list-group-item.list-group-item-action(href='#')
-                    | Teacher Aide A
-                  a.list-group-item.list-group-item-action(href='#') Teacher Aide B
-              .list-group.col-md-4
-                h5 Students Already In Queue
-                a.list-group-item.list-group-item-action
-                  | 7
-                a.list-group-item.list-group-item-action 13
-            .mt-3.col-md-2
-              button.btn.btn-primary(type='button' onclick="window.location.href='question_success'" ;='') Submit
+          form.card.p-3
+            h2.text-center Have a question? We'll try to find an answer!
+            .container.h-100
+              .d-xl-flex.justify-content-center.h-100
+                .searchBar
+                  form(action='/questions' method='post')
+                    input.searchInput(type='text' name='question' placeholder='Supervised vs Unsupervised machine learning?')
+                    button.searchIcon(type='submit')
+                      i.fas.fa-search
+          hr
     .overlay
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
