--- a/server/public/stylesheets/questions.css
+++ b/server/public/stylesheets/questions.css
@@ -66,8 +66,8 @@ a:focus {
 }
 
 .card{
-    background-color: #252525;
-    box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
+    background-color: #181818;
+    box-shadow: 0 2px 4px 0 rgba(111,111,111,0.2);
 }
 
 
@@ -80,6 +80,14 @@ a:focus {
     text-shadow: 0px 1px 2px rgb(197, 161, 119)
 }
 
+#content h3{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  letter-spacing: 1px;
+  color: #FCA926;
+  text-shadow: 0px 1px 2px rgb(197, 161, 119)
+}
 
 #content h5 {
     font-family: 'Roboto', sans-serif;
@@ -93,60 +101,6 @@ a:focus {
     background-color: #f7f6e7;
     text-shadow: 0px 1px 2px rgb(197, 161, 119)
 }
-
- /* The switch - the box around the slider */
- .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #FCA926;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #FCA926;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
 
   .input-group.mb-3 {
     background-color: #f7f6e7;
