--- a/server/views/questions_search.jade
+++ b/server/views/questions_search.jade
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Question Search
+    title Maple Donut - Search a Question
 
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINKS
@@ -20,40 +20,17 @@ html
     // 4 - Bootstrap JS
     // 5 - jQuery Custom Scroller CDN
     // 6 - Sidebar Animation JS
+    // 7,8 - Google Auth 
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     script(type='text/javascript' src='/javascripts/sidebar.js')
-    // Bruce's Scripts
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
     script(type='text/javascript' src='/javascripts/google.js')
 
   body
-    //google auth stuff
-    script.
-      function logOut() {
-        var auth2 = gapi.auth2.getAuthInstance();
-        if(auth2.isSignedIn.get()){
-          auth2.signOut().then(function () {
-            console.log('User signed out.');
-            window.location.replace("login");
-          });
-        }
-
-      }
-      function onLoad() {
-      gapi.load('auth2', function() {
-      auth2 = gapi.auth2.init({
-        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
-        cookiepolicy: 'single_host_origin',
-        ux_mode: 'redirect',
-        redirect_uri: 'http://localhost:3000/home',
-        hosted_domain: 'mymacewan.ca',
-      });
-      });
-      }
     .wrapper
       // Sidebar
       nav#sidebar
@@ -125,16 +102,24 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-          form.card.p-3
-            h2.text-center Have a question? We'll try to find an answer!
-            .container.h-100
-              .d-xl-flex.justify-content-center.h-100
-                .searchBar
-                  form(action='/questions' method='post')
-                    input.searchInput(type='text' name='question' placeholder='Supervised vs Unsupervised machine learning?')
-                    button.searchIcon(type='submit')
-                      i.fas.fa-search
+          br
+          br
+          br
+          br
+          h2.text-center Have a question? We'll try to find an answer!
+          .container.h-100
+            .d-xl-flex.justify-content-center.h-100
+              .searchBar
+                form(action='/questions_search' method='post')
+                  input.searchInput(type='text' name='question_search' placeholder='e.g. What is Supervised learning?')
+                  button.searchIcon(type='submit')
+                    i.fas.fa-search
           hr
+          .searchResultContainer
+            for questions in locals.data
+              if questions.question_title != Null
+                .card
+                  h3.text-center #{questions.question_title}
+                  .cardContainer
+                    h4.text-center #{questions.question_desc}
     .overlay
-    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
-    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
