--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -127,9 +127,9 @@ html
             .d-flex.justify-content-center.h-100
               .container.h-100
                 .d-flex.justify-content-center.h-100
-                  .searchBar
-                    input.searchInput(id='searchInput' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
-                    a.searchIcon(href='#')
+                  .searchBar(id='search_bar')
+                    input.searchInput(id='search_input' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
+                    a.searchIcon(id='search_icon' href='#')
                       i.fas.fa-search
             hr
             h3.text-center Your Courses
