--- a/server/public/stylesheets/layout/searchbar.css
+++ b/server/public/stylesheets/layout/searchbar.css
@@ -1,7 +1,7 @@
 /* ---------------------------------------------------
     SEARCH BAR STYLE
 ----------------------------------------------------- */
-.searchBar{
+#search_bar{
     margin-bottom: auto;
     margin-top: auto;
     width: 550px;
@@ -12,7 +12,7 @@
     transition: 0.3s;
 }
 
-.searchInput{
+#search_input{
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -28,17 +28,17 @@
     transition: width 0.4s linear;
 }
 
-.searchBar:hover > form .searchInput{
+#search_input:hover > #search_input{
     caret-color:#FCA926;
     transition: width 0.4s linear;
 }
 
-.searchBar:hover{
+#search_bar:hover{
     background-color: #353b48;
     transition: all .25s ease-out;
 }
 
-.searchIcon{
+#search_icon{
     height: 30px;
     width: 30px;
     border: none;
@@ -53,7 +53,7 @@
     transition: all 0.1s linear;
 }
 
-.searchBar:hover > form .searchIcon{
+#search_bar:hover > #search_icon{
     background: #FCA926;
     color: white;
 }
